# proves-core-reference

./: .clang-format  .codespell-ignore-words.txt  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  Dockerfile.test-env  GITHUB_PAGES_SETUP.md  INVESTIGATION.md  Kconfig  Makefile  PROBLEM.md  RADIO_DEBUG_PLAN.md  README.md  S-BAND-REINTEGRATION-PLAN.md  TODO.md  a.txt  bootable.uf2  fprime-gds.yml  hwil-bench.conf  mkdocs.yml  prj.conf  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  settings.ini  west-commands.yml  west.yml
.claude/skills/: debug-ci.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  build_issue.md  build_issue.yml  component_issue.md  component_issue.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yaml  deploy-docs.yml
FprimeZephyrReference/: CMakeLists.txt
FprimeZephyrReference/ComCcsdsLora/: ComCcsds.fpp  PingEntries.hpp  SubtopologyTopologyDefs.hpp
FprimeZephyrReference/ComCcsdsSband/: CMakeLists.txt  ComCcsdsSband.fpp
FprimeZephyrReference/ComCcsdsUart/: ComCcsds.fpp  SubtopologyTopologyDefs.hpp
FprimeZephyrReference/Components/: CMakeLists.txt
FprimeZephyrReference/Components/Authenticate/: Authenticate.cpp  Authenticate.fpp  Authenticate.hpp  AuthenticateCfg.hpp  CMakeLists.txt
FprimeZephyrReference/Components/Authenticate/docs/: sdd.md
FprimeZephyrReference/Components/MyComponent/: CMakeLists.txt  FprimeHal.cpp  FprimeHal.h  FprimeHal.hpp  Hal.cpp  Hal.h  MyComponent.cpp  MyComponent.fpp  MyComponent.hpp  SX1281.cpp  SX1281.h  SX128x.cpp  SX128x.h  radio.h  sx1280-hal.cpp  sx1280-hal.h  sx1280.cpp  sx1280.h
FprimeZephyrReference/Components/MyComponent/docs/: sdd.md
FprimeZephyrReference/Components/SBand/: CMakeLists.txt  FprimeHal.cpp  FprimeHal.hpp  SBand.cpp  SBand.fpp  SBand.hpp
FprimeZephyrReference/Components/SBand/docs/: sdd.md
FprimeZephyrReference/ReferenceDeployment/: CMakeLists.txt  Main.cpp
FprimeZephyrReference/TlmLoggerTee/: TlmLoggerTee.fpp
FprimeZephyrReference/gds/: __init__.py  multi_scid_framer.py  satellite_switcher.py  shared_state.py
FprimeZephyrReference/test/: bootloader_trigger.py  manual_stress_test.py  run_interactive_tests.py  (+1 more)
Framing/: pyproject.toml  setup.py
Framing/src/: authenticate_plugin.py  my_plugin.py
PROVESFlightControllerReference/: CMakeLists.txt
PROVESFlightControllerReference/Components/SBand/: CMakeLists.txt  FprimeHal.cpp  FprimeHal.hpp  RadioLibSBandRadio.cpp  RadioLibSBandRadio.hpp  SBand.cpp  SBand.fpp  SBand.hpp  SBandFaultPolicy.cpp  SBandFaultPolicy.hpp  SBandRadioIf.hpp
PROVESFlightControllerReference/Components/SBand/docs/: sdd.md
PROVESFlightControllerReference/test/unit-tests/: CMakeLists.txt  README.md  test_DetumbleManager_Magnetorquer.cpp  test_DetumbleManager_StrategySelector.cpp  test_PacketAuthenticator.cpp  test_PacketParser_ParsePacket.cpp  test_PacketProcessor_Authenticator.cpp  test_PacketProcessor_Parser.cpp  test_PacketProcessor_Validator.cpp  test_PacketValidator.cpp  test_ProvesRouter_Bypasser.cpp  test_RtcManager_RtcHelper.cpp  test_SBand_FaultPolicy.cpp  test_StackMonitor_Core.cpp  test_TcSecurityDeframer_Authenticator.cpp  test_TcSecurityDeframer_Parser.cpp  test_TcSecurityDeframer_Validator.cpp
boards/: rpi_pico2_rp2350a_m33.overlay
bootloader/: README.md  sysbuild.conf
circuit-python-lora-passthrough/: code.py  feather_code.py
circuit-python-lora-passthrough-feather/: code.py
circuit-python-passthrough/: Makefile  README.md  code-lora.py  code-sband.py  config.json  requirements.txt
circuit-python-sband-passthrough/: code.py
docs-site/: README.md  index.md
drivers/: CMakeLists.txt  Kconfig
drivers/memc/: CMakeLists.txt  Kconfig  memc_rp2350_psram.c  memc_rp2350_psram.h
makelib/: build-tools.mk  zephyr.mk
micro-python/: camera-main.py  pyproject.toml
patches/: 0001-feat-sx126x-add-external-RF-switch-GPIO-support-tx-r.patch  0002-fix-zephyr-4.3-remove-select-ZEPHYR_LORA_BASICS_MODE.patch  0003-fix-usp-main-2025-fix-LR_FHSS_SRC_PATH-for-flattened.patch  0004-fix-usbd-cdc-acm-poll-mode-tx-drain-on-class-enable.patch  0005-fix-usbd-cdc-acm-stuck-tx-fifo-busy-on-disable-and-retry.patch  0006-fix-sx126x-wakeup-busy-race-add-t_woff-settle-delay.patch  0007-fix-usbd-cdc-acm-bound-poll-out-backpressure-wait.patch  0008-fix-smtc-modem-hal-implement-rac-api-mutex.patch  0009-fix-radio-planner-failsafe-exempt-unlock-radio-access.patch  0010-fix-boards-xiao-nrf54l15-full_name-zephyr-4.4-schema.patch  README.md  fprime-com-aggregator-bounded-timeout.patch  fprime-comqueue-reprime-tolerance.patch  fprime-gds-version.patch  fprime-sched-tick-drop.patch  fprime-tlmpacketizer-i16-offset.patch  fprime-yamcs-noapp-path.patch  zephyr-cdc-acm-pollmode-enable-drain.patch
scripts/: check_console_disabled.py  generate_auth_default_key.h  generate_auth_key_header.py  generate_spi_dict.py
sequences/: camera_handler_1.seq  cancel_sequencers.seq  enter_safe.seq  face_chase.seq  lose_time.seq  not-your-face.seq  pass-10min.seq  proves_demo.seq  radio-fast.seq  radio_enter_safe.seq  startup.seq  test-sequence.seq  test_rtc_cancel.seq  test_seq_1.seq  test_seq_2.seq  throttle_amateurs.seq  your-face.seq
test/: test_day_in_the_life.py  test_edge_cases_day_in_the_life.py
tests/: CMakeLists.txt  README.md  test_DetumbleManager_BDot.cpp  test_DetumbleManager_Magnetorquer.cpp  test_DetumbleManager_StrategySelector.cpp  test_DetumbleManger_Magnetorquer.cpp  test_RtcManager_RtcHelper.cpp
tools/: README.md  apply-events-cpu-fix.py  apply-opcode-ack-fix.py  apply-yamcs-constants-order-fix.py  apply-yamcs-instance-config-fix.py  data_budget.py  patch-zephyr-sdk-toolchain-download.py  telemetry_archive.py
yamcs/: deployments.yaml  docker-compose.yml  fprime-gds.yml  pyyaml-override.txt
yamcs-ui/: index.html  package-lock.json  package.json  vite.config.js
zephyr/: CMakeLists.txt
(+809 files in other folders)
