[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proves-core-reference"
version = "0.1.0"
description = "A reference software implementation for the PROVES Kit, integrating F Prime and Zephyr"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [
    {name = "Open Source Space Foundation"},
]
keywords = ["fprime", "zephyr", "embedded", "aerospace", "flight-software"]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://www.opensource.space/"
Repository = "https://github.com/Open-Source-Space-Foundation/proves-core-reference"
Documentation = "https://docs.proveskit.space/en/latest/"
Issues = "https://github.com/Open-Source-Space-Foundation/proves-core-reference/issues"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
dependencies = {file = [
    "requirements.txt",
    "lib/fprime/requirements.txt",
    "lib/zephyr-workspace/zephyr/scripts/requirements-base.txt",
    "lib/zephyr-workspace/zephyr/scripts/requirements-build-test.txt",
    "lib/zephyr-workspace/zephyr/scripts/requirements-run-test.txt",
]}
