[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fprime-gds-my-plugin"
version = "0.1.0"
dependencies = [
    "pluggy>=1.3.0",
    "fprime-gds>=3.4.4"
]

[project.entry-points.fprime_gds]
#my_plugin = "my_plugin:MyPlugin"
autheticate_space_data_link = "my_plugin:AuthenticateCompFramer"

[tool.setuptools_scm]

[tool.interrogate]
ignore = ["Framing/"]
