[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fprime-gds-my-plugin"
version = "0.1.0"
dependencies = [
    "pluggy>=1.3.0",
    "fprime-gds>=4.1.1a2"
]

[project.entry-points.fprime_gds]
authenticate_space_data_link = "authenticate_plugin:AuthenticateCompFramer"

[tool.setuptools_scm]

[tool.interrogate]
